# e-player

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.vue  main.ts  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.toml
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: Greet.vue  PlayerBar.vue  PlayerControls.vue  TopMenu.vue  TrackList.vue
src/router/: index.ts
src/stores/: library.ts  player.ts
src/utils/: cache.ts
src/views/: Library.vue  player.vue
